# my_activities

./: .gitignore  .gitmodules  Cargo.toml  activities_db.sqlite3
.github/workflows/: default.yml
actix-auth-middleware/: Cargo.toml
actix-auth-middleware/src/: lib.rs  middleware.rs
actix-auth-middleware/src/session/: session_auth.rs
auth_code_gen/: Cargo.toml
auth_lib/: Cargo.toml
auth_lib/src/: lib.rs  middleware.rs  session.rs
auth_lib/src/session/: middleware.rs  session_auth.rs
frontend/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: proxy.conf.json  styles.css
frontend/src/account/: account.component.html  account.component.ts
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/app/account/: account.component.html  account.component.ts
frontend/src/app/core/guards/: auth.guard.ts  login.guard.ts
frontend/src/app/guards/: auth.guard.ts  login.guard.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/register-totp/: register-totp.component.html  register-totp.component.spec.ts  register-totp.component.ts
frontend/src/app/services/: auth.service.ts
frontend/src/login/: login.component.html  login.component.ts
src/: app_factory.rs  controller.rs  domain.rs  main.rs
src/application/: auth_middleware.rs  authentication.rs
src/config/: Config.rs  config.rs  db.rs
src/controller/: activity_controller.rs  authentication_controller.rs  mfa_controller.rs  qrcode_controller.rs  root_controller.rs
src/domain/: auth_api.rs  user.rs  user_api.rs
src/error/: errors.rs
src/service/: auth_service.rs  user_service.rs
static/: index.html  private.html
